[project]
name = "httpx-retry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"